<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.jordan.atmconsultoria.ContatoActivity">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/detalhe_contato"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp"
        android:layout_marginLeft="26dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="24dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contato"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="67dp"
        android:layout_marginLeft="48dp"
        android:layout_marginStart="48dp"
        android:layout_alignBottom="@+id/imageView7"
        android:layout_toRightOf="@+id/imageView7"
        android:layout_toEndOf="@+id/imageView7"
        android:layout_marginBottom="44dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="154dp"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/imageView7"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telefone"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="211dp"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/textView11"
        android:layout_alignStart="@+id/textView11" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/celular"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="246dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/textView12"
        android:layout_alignLeft="@+id/textView12"
        android:layout_alignStart="@+id/textView12" />
</RelativeLayout>
