<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="br.com.jordan.atmconsultoria.ClienteActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/detalhe_cliente"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nossos_clientes"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/holo_green_light"
        tools:layout_editor_absoluteX="145dp"
        tools:layout_editor_absoluteY="45dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/imageView4"
        android:layout_toEndOf="@+id/imageView4"
        android:layout_marginLeft="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="58dp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/cliente1"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="165dp"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/imageView4"
        android:layout_alignLeft="@+id/imageView6"
        android:layout_alignStart="@+id/imageView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sys"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
        tools:layout_editor_absoluteX="78dp"
        tools:layout_editor_absoluteY="236dp"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/imageView5"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/cliente2"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="280dp"
        android:layout_marginTop="23dp"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp"
        android:layout_below="@+id/textView8"
        android:layout_alignLeft="@+id/imageView4"
        android:layout_alignStart="@+id/imageView4" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rsm"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
        tools:layout_editor_absoluteX="78dp"
        tools:layout_editor_absoluteY="356dp"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/imageView6"
        android:layout_alignLeft="@+id/textView8"
        android:layout_alignStart="@+id/textView8" />
</RelativeLayout>
